# devkit

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
devkit/: __main__.py  cli.py  config_model.py  context.py  doctor.py  introspect.py  iofmt.py  postgres.py  rails.py  services.py  shell.py  ux.py
docs/: agents.md  commands.md  configuration.md  database.md  index.md  install.md  services.md  troubleshooting.md
scripts/: generate_reference.py
